Fix for #48 - LCM rules import/copying - enhance readability when handling jsons in service characteristic

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,9 +35,9 @@ $secondary: #6c6c6c;
 
 @import "~bootstrap/scss/bootstrap";
 
-.mat-chip-list-wrapper {
-    flex-wrap: nowrap !important;
-}
+// .mat-chip-list-wrapper {
+//     flex-wrap: nowrap !important;
+// }
 
 .mat-chip {
     overflow: unset !important;
